# Hackathon-II

Phase I/: README.md  pyproject.toml
Phase I/.claude/agents/: cli-interface-subagent.md  core-todo-impl.md  lead-architect-todo.md  setup-testing-subagent.md
Phase I/.claude/skills/: add-task.md  confirm-action.md  create-project-file.md  delete-task.md  display-main-menu.md  find-task.md  get-integer-input.md  get-menu-choice.md  get-next-id.md  initialize-project-uv.md  print-task-list.md  toggle-complete.md  update-task.md
Phase I/.specify/memory/: constitution.md
Phase I/history/prompts/1-todo-app-core/: 1-create-phase-one-spec.spec.prompt.md  2-generate-implementation-plan.plan.prompt.md  3-generate-implementation-tasks.tasks.prompt.md  4-execute-implementation.red.prompt.md  5-execute-implementation.green.prompt.md
Phase I/history/prompts/constitution/: 1-amend-constitution-phase-i.constitution.prompt.md
Phase I/specs/1-todo-app-core/: plan.md  spec.md  tasks.md
Phase I/specs/1-todo-app-core/checklists/: requirements.md
Phase I/src/: main.py
Phase I/tests/: test_main.py
